--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
-node_modules
+/node_modules
+
+/dist
+/tmp
+/out-tsc
+
+/bazel-out
+
+chrome-profiler-events*.json
+speed-measure-plugin*.json
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+yarn-error.log
+testem.log
+/typings
+
+.DS_Store
+Thumbs.db
