--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
-/node_modules
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Compiled output
 /dist
 /tmp
 /out-tsc
-
 /bazel-out
 
-chrome-profiler-events*.json
-speed-measure-plugin*.json
-/.idea
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+
+# IDEs and editors
+.idea/
 .project
 .classpath
 .c9/
@@ -16,13 +20,23 @@ speed-measure-plugin*.json
 .settings/
 *.sublime-workspace
 
-/.sass-cache
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Miscellaneous
+/.angular/cache
+.sass-cache/
 /connect.lock
 /coverage
 /libpeerconnection.log
-yarn-error.log
 testem.log
 /typings
 
+# System files
 .DS_Store
 Thumbs.db
