--- a/package.json
+++ b/package.json
@@ -1,64 +1,46 @@
 {
-  "name": "angular-boilerplate",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "ng serve --open",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "ng": "ng"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@angular/cli": "^17.3.5",
-    "@angular/common": "^17.3.5",
-    "@angular/compiler": "^17.3.5",
-    "@angular/compiler-cli": "^17.3.5",
-    "@angular/core": "^17.3.5",
-    "@angular/forms": "^17.3.5",
-    "@angular/platform-browser": "^17.3.5",
-    "@angular/platform-browser-dynamic": "^17.3.5",
-    "@angular/router": "^17.3.5",
-    "@types/jasmine": "^5.1.4",
-    "@types/jasminewd2": "^2.0.13",
-    "@types/node": "^20.12.7",
-    "jasmine-core": "^5.1.2",
-    "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.4.3",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
-    "rxjs": "^7.8.1",
-    "ts-node": "^10.9.2",
-    "tslib": "^2.6.2",
-    "tslint": "^6.1.3",
-    "typescript": "^5.4.5",
-    "zone.js": "^0.14.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.1",
-    "@angular/cli": "17.3.5",
-    "@angular/compiler-cli": "17.3.5",
-    "@types/jasmine": "5.1.4",
-    "@types/jasminewd2": "2.0.13",
-    "@types/node": "20.1.0",
-    "codelyzer": "^0.0.28",
-    "jasmine-core": "5.1.2",
-    "jasmine-spec-reporter": "7.0.0",
-    "karma": "6.4.3",
-    "karma-chrome-launcher": "3.2.0",
-    "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "5.1.0",
-    "karma-jasmine-html-reporter": "2.1.0",
-    "protractor": "^3.3.0",
-    "ts-node": "10.9.1",
-    "tslint": "6.1.3",
-    "typescript": "5.4.5"
-  }
+    "name": "angular-signup-verification-boilerplate",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve --open",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^17.3.2",
+        "@angular/common": "^17.3.2",
+        "@angular/compiler": "^17.3.2",
+        "@angular/core": "^17.3.2",
+        "@angular/forms": "^17.3.2",
+        "@angular/platform-browser": "^17.3.2",
+        "@angular/platform-browser-dynamic": "^17.3.2",
+        "@angular/router": "^17.3.2",
+        "rxjs": "^6.5.5",
+        "tslib": "^2.0.0",
+        "zone.js": "^0.14.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^17.3.5",
+        "@angular/cli": "^17.3.2",
+        "@angular/compiler-cli": "^17.3.2",
+        "@types/jasmine": "^3.5.0",
+        "@types/jasminewd2": "^2.0.3",
+        "@types/node": "^12.11.1",
+        "codelyzer": "^0.0.28",
+        "jasmine-core": "^3.5.0",
+        "jasmine-spec-reporter": "^5.0.0",
+        "karma": "^6.4.3",
+        "karma-chrome-launcher": "^3.1.0",
+        "karma-coverage-istanbul-reporter": "^3.0.2",
+        "karma-jasmine": "^3.3.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "protractor": "^7.0.0",
+        "ts-node": "^8.3.0",
+        "tslint": "^6.1.0",
+        "typescript": "^5.4.3"
+    }
 }
